# cdr_bench

./: README.md  analyze_lib_distance_preservation.py  analyze_results.py  pyproject.toml  run_optimization.py  setup.py
bench_configs/: features.toml  run_benchmarking.toml  test_run_benchmarking.toml
bench_configs/method_configs/: gtm_config.toml  tsne_config.toml  umap_config.toml
cdr/dr_methods/: dimensionality_reduction.py
cdr/features/: feature_preprocessing.py
cdr/io_utils/: data_preprocessing.py  io.py  prepare_lolo.py
cdr/visualization/: visualization.py  visualize_stats.py
datasets/: chembl_33_np_.h5
notebooks/: Example.ipynb  IO.ipynb  chemdiv_analysis.ipynb  features.ipynb  fisher_id.ipynb  fisher_id_analysis.ipynb  io.ipynb  visualization.ipynb
results/: Fisher_ID_stats.csv
results/diversity/: all_chembl_chemdiv.csv  all_chembl_network.csv  chembl_chemdiv.csv  chembl_network.csv  combined_data.csv  random_chembl_chemdiv.csv  random_chembl_network.csv
results/in_sample_eucl/: embed_final_metrics.docx  maccs_keys_final_metrics.docx  mfp_r2_1024_final_metrics.docx
results/in_sample_ti/: embed_final_metrics.docx  maccs_keys_final_metrics.docx  mfp_r2_1024_final_metrics.docx
results/low_id_chembl_subsets/: embed_final_metrics.docx  maccs_keys_final_metrics.docx  mfp_r2_1024_final_metrics.docx
results/out_of_sample/: embed_final_metrics.docx  maccs_keys_final_metrics.docx  mfp_r2_1024_final_metrics.docx
scripts/: analyze_results.py  generate_descriptors.py  prepare_lolo.py  run_benchmarking.py  run_optimization.py
(+705 files in other folders)
